// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem /> renders bordered 1`] = `
<div
  className="item-0-2-3 item_bordered-0-2-4"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={false}
    className="title-0-2-5"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="titleText-0-2-6"
    >
      Title
    </span>
    <DirectionalIcon
      decorative={true}
      direction="right"
      left={[Function]}
      right={[Function]}
      size={24}
    />
  </button>
  <section
    aria-hidden={true}
    aria-labelledby="accordion-title-.0"
    className="body-0-2-1"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;

exports[`<AccordionItem /> renders expanded 1`] = `
<div
  className="item-0-2-3"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={true}
    className="title-0-2-5"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="titleText-0-2-6"
    >
      Title
    </span>
    <IconChevronDown
      decorative={true}
      size={24}
    />
  </button>
  <section
    aria-hidden={false}
    aria-labelledby="accordion-title-.0"
    className="body-0-2-1 body_expanded-0-2-2"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;
